welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:29: error: not found: value k
        if(k<=1){        	
           ^